# racing_track_detection_resnet

./: CMakeLists.txt  README.md  package.xml
include/racing_track_detection/: racing_track_detection.h
launch/: racing_track_detection_resnet.launch.py  racing_track_detection_resnet_simulation.launch.py
src/: racing_track_detection.cpp
